--- a/railway.toml
+++ b/railway.toml
@@ -3,9 +3,9 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "python start_server.py"
+startCommand = "python start_server_docker.py"
 healthcheckPath = "/api/v1/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 120
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
