--- a/railway.toml
+++ b/railway.toml
@@ -4,18 +4,18 @@ dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = "python start_server_docker.py"
-healthcheckPath = "/api/v1/health"
-healthcheckTimeout = 120
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 sleepApplication = false
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [[deploy.healthcheckProbes]]
-path = "/api/v1/health"
-initialDelaySeconds = 30
-periodSeconds = 30
-timeoutSeconds = 10
-failureThreshold = 3
+path = "/health"
+initialDelaySeconds = 60
+periodSeconds = 60
+timeoutSeconds = 30
+failureThreshold = 10
 
 [env]
 USE_GPU = "false"
