--- a/railway.toml
+++ b/railway.toml
@@ -12,7 +12,7 @@ restartPolicyMaxRetries = 10
 
 [[deploy.healthcheckProbes]]
 path = "/health"
-initialDelaySeconds = 60
+initialDelaySeconds = 120  # OCR models take 60-90s to load
 periodSeconds = 60
 timeoutSeconds = 30
 failureThreshold = 10
