Suppress progress bars in production with TQDM_DISABLE env var

--- a/railway.toml
+++ b/railway.toml
@@ -20,3 +20,6 @@ failureThreshold = 10
 [env]
 USE_GPU = "false"
 PYTHONUNBUFFERED = "1"
+PYTHONIOENCODING = "utf-8"
+# Suppress progress bars in downloads
+TQDM_DISABLE = "1"
