FIX 502 TIMEOUT: Pre-load EasyOCR + add memory monitoring
- Pre-initialize EasyOCR at startup (was lazy-loading, causing 20s+ first-request timeouts)
- Add memory monitoring to track OCR processing memory usage
- Add system-level crash detection in start_server_docker.py
- Increase health check initialDelaySeconds to 120s (both OCR models pre-load)
- This should fix the 502 errors caused by request timeouts

--- a/railway.toml
+++ b/railway.toml
@@ -12,7 +12,7 @@ restartPolicyMaxRetries = 10
 
 [[deploy.healthcheckProbes]]
 path = "/health"
-initialDelaySeconds = 30  # Faster startup now (only PaddleOCR pre-loads)
+initialDelaySeconds = 120  # Both PaddleOCR + EasyOCR pre-load (~90-120s first run)
 periodSeconds = 60
 timeoutSeconds = 30
 failureThreshold = 10
