Revert to lazy-loading EasyOCR - healthcheck timeout fix
Railway's 5-minute healthcheck timeout is insufficient for EasyOCR model download.
- Skip EasyOCR pre-load at startup (was causing deployment failure)
- EasyOCR will lazy-load on first request (adds 15-30s to first request only)
- Reduce healthcheck initialDelaySeconds to 30s (only PaddleOCR pre-loads now)
- Service will start successfully within Railway's timeout window
- Subsequent requests will be fast (EasyOCR cached after first use)

--- a/railway.toml
+++ b/railway.toml
@@ -12,7 +12,7 @@ restartPolicyMaxRetries = 10
 
 [[deploy.healthcheckProbes]]
 path = "/health"
-initialDelaySeconds = 120  # Both PaddleOCR + EasyOCR pre-load (~90-120s first run)
+initialDelaySeconds = 30  # Only PaddleOCR pre-loads (~15-30s), EasyOCR lazy-loads
 periodSeconds = 60
 timeoutSeconds = 30
 failureThreshold = 10
