Fix: Remove image resizing that broke OCR + Reorganize docs with DigitalOcean deployment guide

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ Thumbs.db
 # Project Specific
 temp_metadata.png
 benchmark_results.json
+
+# Sensitive Deployment Docs (contains passwords)
+DIGITALOCEAN_FRONTEND_REFERENCE.md
