--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     build: .
     container_name: riftbound-ocr
     ports:
-      - "8002:8002"
+      - "8080:8080"
     environment:
       # Service Configuration
       - SERVICE_HOST=0.0.0.0
-      - SERVICE_PORT=8002
+      - SERVICE_PORT=8080
       - DEBUG=false
       
       # OCR Settings
@@ -41,7 +41,7 @@ services:
     restart: unless-stopped
     
     healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8002/api/v1/health', timeout=5)"]
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8080/api/v1/health', timeout=5)"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -51,10 +51,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2.0'
+          cpus: '0.9'  # Use 90% of available CPU (for 1-core droplets)
           memory: 4G
         reservations:
-          cpus: '1.0'
+          cpus: '0.5'
           memory: 2G
 
 volumes:
